<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/dark_gray"
        android:paddingStart="10dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/new_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="8"
            android:background="@color/dark_gray"
            android:fontFamily="sans-serif-light"
            android:text="@string/new_device"
            android:textColor="@color/light_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Post_device"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-light"
            android:text="@string/salvar"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/chose_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:background="@color/dark_gray"
        android:fontFamily="sans-serif-light"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/device_type"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/device_typo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif-light"
        android:text="@string/v_deo"
        android:textColor="@color/light_gray"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/input_device_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/ic_launcher_cutomizebox"
        android:fontFamily="sans-serif-light"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_device_serial"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/ic_launcher_cutomizebox"
        android:fontFamily="sans-serif-light"
        android:hint="@string/id_cloud"
        android:inputType="textCapCharacters"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_device_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/ic_launcher_cutomizebox"
        android:fontFamily="sans-serif-light"
        android:hint="@string/device_user"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_device_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/ic_launcher_cutomizebox"
        android:fontFamily="sans-serif-light"
        android:hint="@string/device_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>
