<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_devide"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@color/gray"
        android:fontFamily="sans-serif-light"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@color/gray"
        android:fontFamily="sans-serif-light"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/cameras"
        android:textColor="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@color/gray"
        android:fontFamily="sans-serif-light"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/central_de_alarme"
        android:textColor="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="390dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/add_device"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="310dp"
            android:backgroundTint="@color/dark_gray"
            app:icon="@drawable/ic_all_add"
            app:iconTint="@color/light_gray" />

    </LinearLayout>

</LinearLayout>